# theChernoOpenGL

./: CMakeLists.txt  Helpers.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  gmon.out  opengl.cpp
res/shaders/: Basic.shader
tests/: Test.h  TestClearColor.cpp  TestClearColor.h
